fix(paths) modif des multiples chemins

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,7 @@
     "string_view": "c",
     "__locale": "c",
     "__string": "c",
-    "string": "c"
+    "string": "c",
+    "lem-in.h": "c"
   }
 }
